--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
   "engines": {
     "node": ">= 4"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "ember-immutable": "^0.2.0"
+  }
 }
